--- a/code/analysis/01_preliminary_charts/time_series_investigations.Rmd
+++ b/code/analysis/01_preliminary_charts/time_series_investigations.Rmd
@@ -13,20 +13,58 @@ source("header.R")
 
 df <- st_read("data/mst/hex_merged_w_stats.gpkg")
 
+
+
+```
+
+
+### Estimation of Black Residency in 1939 and 1948 
+```{r, echo=FALSE}
+
+df_black_res <- df %>% 
+  st_drop_geometry() %>% 
+  filter(year == 1950) %>% 
+  dplyr::select(GRID_ID, contains("bk_res")) %>% 
+  mutate(est_black_res_39 = pmax(bk_res_1, bk_res_2, bk_res_3) - (bk_res_4_1 + bk_res_4_2 + bk_res_4_3), 
+         est_black_res_39 = ifelse(est_black_res_39 <=  0, 0, est_black_res_39)) %>% 
+    mutate(est_black_res_48 = abs(pmax(bk_res_1, bk_res_2, bk_res_3) - (bk_res_5_1 + bk_res_5_2 + bk_res_5_3)), 
+         est_black_res_48 = ifelse(est_black_res_48 <=0, 0, est_black_res_48)) %>% 
+  dplyr::select(GRID_ID, est_black_res_39, est_black_res_48)
+
 df <- df %>% 
+  left_join(df_black_res, by = "GRID_ID") %>% 
   mutate(bk_res_4 = bk_res_4_1 + bk_res_4_2 + bk_res_4_3, 
          bk_res_5 = bk_res_5_1 + bk_res_5_2 + bk_res_5_3) %>% 
-  mutate(bk_res_4_cat = case_when(bk_res_4_3 > 0 ~ "Any Increase From 1% or More to More than 90%", 
-                                  bk_res_4_2 > 0 ~ "Significant Increase From 1% or More to Less than 90%", 
+  mutate(bk_res_4_cat = case_when(bk_res_4_2 > 0 ~ "Significant Increase From 1% or More to Less than 90%", 
+                                  bk_res_4_3 > 0 ~ "Any Increase From 1% or More to More than 90%", 
                                   bk_res_4_1 > 0 ~ "Any Increase From Less Than 1%")) %>% 
-  mutate(bk_res_5_cat = case_when(bk_res_5_3 > 0 ~ "Any Increase From 1% or More to More than 90%", 
-                                  bk_res_5_2 > 0 ~ "Significant Increase From 1% or More to Less than 90%", 
+  mutate(bk_res_since_39 = case_when((bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & est_black_res_39 > 0 & bk_res_4 == 0 ~ 
+                                       "Black Residency Likely Since 1939 & No Migration", 
+                                     (bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & est_black_res_39 > 0 & bk_res_4 > 0 ~ 
+                                       "Black Residency Likely Since 1939 & Migration",
+                                      (bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & est_black_res_39 == 0 & bk_res_4 > 0 ~ 
+                                       "Likely No Black Residency in 1939 & Migration",
+                                     TRUE ~ "No Black Residency in 1950")) %>% 
+    mutate(bk_res_5_cat = case_when(bk_res_5_2 > 0 ~ "Significant Increase From 1% or More to Less than 90%", 
+                                  bk_res_5_3 > 0 ~ "Any Increase From 1% or More to More than 90%", 
                                   bk_res_5_1 > 0 ~ "Any Increase From Less Than 1%")) %>% 
-  mutate(bk_res_since_39 = ifelse((bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & bk_res_4 == 0, 
-                                  "Black Residency Since 1939", "No Black Residency in 1950"))
+  mutate(bk_res_since_48 = case_when((bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & est_black_res_48 > 0 & bk_res_5 == 0 ~ 
+                                       "Black Residency Likely Since 1948 & No Migration", 
+                                     (bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & est_black_res_48 > 0 & bk_res_5 > 0 ~ 
+                                       "Black Residency Likely Since 1948 & Migration",
+                                      (bk_res_1 > 0 | bk_res_2 > 0 | bk_res_3 > 0) & est_black_res_48 == 0 & bk_res_5 > 0 ~ 
+                                       "Likely No Black Residency in 1948 & Migration",
+                                     TRUE ~ "No Black Residency in 1950")) %>% 
+  mutate(zoning = case_when(hazardous > 0  ~ "At Least in Part Deemed Hazardous", 
+                            def_decl > 0 ~ "At Least in Part Deemed Definitely Declining & No Part Hazardous", 
+                            best > 0 ~ "At Least in Part Deemed Best & No Part Hazardous or Declining", 
+                            commercial > 0 | industrial > 0 ~ "Commercial or Industrial", 
+                            TRUE ~ "Not Classified"))
 
 
-
+#MAKE SURE WE KEEP A LOOK OUT FOR AK 29 - something fishy 
+# ggplot(data = df %>% filter(year == 1950 ))+ 
+#   geom_sf(aes(fill = ifelse(GRID_ID == "AK-29", 1, 0)))
 
 ```
 
@@ -47,15 +85,15 @@ df %>% st_drop_geometry() %>% filter(hom_rt_mean_5>0) %>%
             q_999_ct = quantile(hom_ct_sum_5, 0.999, na.rm = T), 
             max = max(hom_ct_sum_5, na.rm = T)) 
 
+
+
 for (year_select in years) {
   
-
-
   g <- ggplot(data = df %>% filter(year == year_select) %>% 
                 mutate(hom_rt_mean_5 = ifelse(is.na(hom_rt_mean_5), 0, hom_rt_mean_5))) +
     geom_sf(aes(fill = hom_rt_mean_5, color = as.factor(in_check))) +
     theme_minimal() + 
-    labs(title = glue("Homicide Rate {year_select-5}-{year_select}"), 
+    labs(title = glue("Homicide Rate {year_select-4}-{year_select}"), 
          fill = "Average Homicide Rate", color = "In Checkerboard") + 
     scale_color_manual(values = c("darkgrey", "black")) +
     scale_fill_gradientn(
@@ -73,7 +111,7 @@ for (year_select in years) {
   g <- ggplot(data = df %>% filter(year == year_select)) +
     geom_sf(aes(fill = hom_ct_sum_5, color = as.factor(in_check))) +
     theme_minimal() +
-    labs(title = glue("Number of Homicides {year_select-5}-{year_select}"), 
+    labs(title = glue("Number of Homicides {year_select-4}-{year_select}"), 
          fill = "Total Number of Homicides",  color = "In Checkerboard") +
     scale_color_manual(values = c("darkgrey", "black")) +
     scale_fill_gradientn(
@@ -86,6 +124,88 @@ for (year_select in years) {
 
   
 }
+
+for (year_select in years) {
+  
+  g <- ggplot(data = df %>% filter(year == year_select)) +
+    geom_sf(aes(fill = bldg_ct_mean_5, color = as.factor(in_check))) +
+    theme_minimal() + 
+    labs(title = glue("Building Count {year_select-4}-{year_select}"), 
+         fill = "Average Building Count", color = "In Checkerboard") + 
+    scale_color_manual(values = c("darkgrey", "black")) +
+    scale_fill_gradientn(
+      colors = c("white",  "#7ce8ff", "#55d0ff", "#00acdf","#0080bf","#00498D", "#02386E", "#00264D"), 
+      limits = c(0, 1700), 
+      na.value = "white") 
+  
+  plot(g)
+
+  
+}
+
+
+ 
+```
+
+# Zoning as of 1935/40 
+
+
+```{r, echo=FALSE}
+
+years <- seq(1880, 1965, 5)
+
+year_select <- years[1]
+
+
+values <- df %>% st_drop_geometry() %>% distinct(zoning) %>% pull()
+plot_colors = setNames(c("red", "orange", "green", "black",  "darkgrey"), 
+                         c("At Least in Part Deemed Hazardous", 
+                         "At Least in Part Deemed Definitely Declining & No Part Hazardous", 
+                         "At Least in Part Deemed Best & No Part Hazardous or Declining", 
+                         "Commercial or Industrial", 
+                         "Not Classified"))
+
+
+
+for (year_select in years) {
+  
+  g <- ggplot(data = df %>% filter(year == year_select) ) +
+    geom_sf(aes(fill = hom_rt_mean_5, color = zoning)) +
+    theme_minimal() + 
+    labs(title = glue("Homicide Rate {year_select-4}-{year_select}"), 
+         fill = "Average Homicide Rate", color = "Zoning ca. 1935-40") + 
+    scale_color_manual(values = plot_colors) + 
+    scale_fill_gradientn(
+      colors = c("white",  "#7ce8ff", "#55d0ff", "#00acdf","#0080bf","#00498D", "#02386E", "#00264D"), 
+      limits = c(0, 3), 
+      na.value = "white") 
+  
+  plot(g)
+
+  
+}
+
+for (year_select in years) {
+  
+  g <- ggplot(data = df %>% filter(year == year_select)) +
+    geom_sf(aes(fill = hom_ct_sum_5, color = zoning)) +
+    theme_minimal() +
+    labs(title = glue("Number of Homicides {year_select-4}-{year_select}"), 
+         fill = "Total Number of Homicides",  color = "Zoning ca. 1935-40") +
+    scale_color_manual(values = plot_colors) + 
+    scale_fill_gradientn(
+      colors = c("white",  "#7ce8ff", "#55d0ff", "#00acdf","#0080bf","#00498D", "#02386E", "#00264D"), 
+      limits = c(0, 80), 
+      na.value = "white") 
+
+
+  plot(g)
+
+  
+}
+
+
+
  
 ```
 
@@ -93,12 +213,14 @@ for (year_select in years) {
 
 Calculate the change of total homicides over 5 year periods, the change of average homicides over 5 year periods, and the change of average homicide rate over 5 year periods. 
 
+Define Notable Decline or Rise as change in the upper 10 percent of declines or rises within year. 
+
 ```{r, echo=FALSE}
 
 df_changes <- df %>% 
   st_drop_geometry() %>% 
   #remove years with lack of data
-  filter(year_5 != 1880 & year_5 != 1930 & year_5 != 1935 & year_5 != 1940 & year_5 != 1945 ) %>% 
+  filter(year_5 != 1880 & year_5 != 1930 & year_5 != 1935 & year_5 != 1940 & year != 1945 ) %>% 
   #filter to period of interest 
   filter(year_5 <= 1965) %>%
   distinct(GRID_ID, year_5, hom_ct_sum_5, hom_ct_mean_5, hom_rt_mean_5) %>% 
@@ -142,14 +264,14 @@ change_calc <- function(var, df = df_changes, decline = TRUE) {
   
 }
 
-decline_sum_ct <- change_calc("hom_ct_sum_5", decline = T)
+decline_sum_ct <- change_calc("hom_ct_sum_5", decline = T) 
 
 decline_mean_ct <- change_calc("hom_ct_mean_5", decline = T)
 
 decline_mean_rt <- change_calc( "hom_rt_mean_5", decline = T)
   
 
-rise_sum_ct <- change_calc("hom_ct_sum_5", decline = F)
+rise_sum_ct <- change_calc("hom_ct_sum_5", decline = F) 
 
 rise_mean_ct <- change_calc("hom_ct_mean_5", decline = F)
 
@@ -161,8 +283,59 @@ df_changes_sum <- rbind(decline_sum_ct, decline_mean_ct, decline_mean_rt, rise_s
 ```
 
 
-## Notable Events 
+## Changes Over Time 
 
+```{r, echo=FALSE}
+
+df_geom <- df %>% dplyr::select(GRID_ID, year, in_check) 
+
+df_changes_plot <- inner_join(df_geom, df_changes, by= c("GRID_ID", "year" = "year_5"))
+
+years <- seq(1885, 1965, 5)
+
+year_select <- years[1]
+
+for (year_select in years) {
+  
+  g <- ggplot(data = df_changes_plot %>% filter(year == year_select) ) +
+    geom_sf(aes(fill = hom_rt_mean_5, color = as.factor(in_check))) +
+    theme_minimal() + 
+    labs(title = glue("Change in Homicide Rate Between {year_select-9}-{year_select-5} and {year_select-4}-{year_select}"), 
+         fill = "Change in Average Homicide Rate", color = "In Checkerboard") + 
+    scale_color_manual(values = c("darkgrey", "black")) +
+    scale_fill_gradientn(
+      colors = c("white",  "#7ce8ff", "#55d0ff", "#00acdf","#0080bf","#00498D", "#02386E", "#00264D"), 
+      limits = c(0, 3), 
+      na.value = "white") 
+  
+  plot(g)
+
+  
+}
+
+for (year_select in years) {
+  
+  g <- ggplot(data = df_changes_plot %>% filter(year == year_select)) +
+    geom_sf(aes(fill = hom_ct_sum_5, color = as.factor(in_check))) +
+    theme_minimal() +
+    labs(title = glue("Change in Total Number of Homicides Between {year_select-9}-{year_select-5} and {year_select-4}-{year_select}"), 
+         fill = "Change in Total Number of Homicides",  color = "In Checkerboard") +
+    scale_color_manual(values = c("darkgrey", "black")) +
+    scale_fill_gradientn(
+      colors = c("white",  "#7ce8ff", "#55d0ff", "#00acdf","#0080bf","#00498D", "#02386E", "#00264D"), 
+      limits = c(0, 80), 
+      na.value = "white") 
+
+
+  plot(g)
+
+
+}
+
+ 
+```
+
+## Notable Changes (Upper 10% of Rises or Declines in a Given Year)
 ### 1950s - 1960s
 
 ```{r, echo=FALSE}
@@ -171,6 +344,8 @@ year_c <- 1955
 var <- "hom_ct_sum_5"
 
 plot_rise <- function(year_c, var) {
+  
+  title_piece <- ifelse(var == "hom_ct_sum_5", "Total Number of Homicides", "Average Homicide Rate")
 
   #Get riots in that time period
   riots <- df %>% 
@@ -190,10 +365,6 @@ plot_rise <- function(year_c, var) {
     distinct(GRID_ID) %>% 
     pull()
   
-  bk_res_change_4 <- df %>% 
-    filter(year == year_c) %>%
-    filter(!is.na(bk_res_4_cat)) %>% 
-    pull(GRID_ID)
   
   #Filter data to those IDS
   
@@ -201,59 +372,126 @@ plot_rise <- function(year_c, var) {
     filter(year == year_c) %>%
     mutate(flag_rise = ifelse(GRID_ID %in% IDS_rise,  "Notable Rise", NA), 
            flag_decline = ifelse(GRID_ID %in% IDS_decline , "Notable Decline", NA), 
-         flag_riot = ifelse(GRID_ID %in% riots , "Riot", NA), 
-         flag_res_change =  ifelse(GRID_ID %in% bk_res_change_4 , 
-                                   "Black Migration 1939-1950", bk_res_since_39)) %>% 
+         flag_riot = ifelse(GRID_ID %in% riots , "Riot", NA)) %>% 
     mutate(flag = paste0(flag_rise, ifelse(is.na(flag_rise), "", ifelse(!is.na(flag_decline) | 
                                                                           !is.na(flag_riot) | 
-                                                                          !is.na(flag_res_change)," & ", "")),
+                                                                          !is.na(bk_res_since_39)," & ", "")),
                         flag_decline, ifelse(is.na(flag_decline), "", ifelse(!is.na(flag_riot) | 
-                                                                          !is.na(flag_res_change)," & ", "")), 
-                         flag_riot, ifelse(is.na(flag_riot), "", ifelse(!is.na(flag_res_change), " & ", "")), 
-                        flag_res_change), 
+                                                                          !is.na(bk_res_since_39)," & ", "")), 
+                         flag_riot, ifelse(is.na(flag_riot), "", ifelse(!is.na(bk_res_since_39), " & ", "")), 
+                        bk_res_since_39), 
            flag = str_replace_all(flag, "NA", "")) %>% 
     filter(!is.na(flag)) %>% 
     mutate(bk_res_4_cat = ifelse(is.na(bk_res_4_cat), "No Change", bk_res_4_cat))
   
   
+  df_plot %>% st_drop_geometry() %>% distinct(flag)
+  
     #Labels
   
-   plot_colors <- setNames(c("#c39797", "#632523","red",
-                              "#ffc04c", "#ffdfbf",
+   plot_colors <- setNames(c( #"Notable Rise"
+                              "#c39797", 
+                              #Notable Rise & Black Residency Likely Since 1939 & Migration
+                             "#632523",
+                             #Notable Rise & Likely No Black Residency in 1939 & Migration
+                             "#2a0000",
                              
-                            "#A8DCAB", "#80EF80", 
-                            "#00FF00",
-                            "#05472A", "#228B22",
+                             #Notable Rise & Riot
+                             "red",
+                             #Notable Rise & Black Residency Likely Since 1939 & No Migration
+                             "#ffc04c", 
+                             #Notable Rise & No Black Residency in 1950
+                             "#ffdfbf",
+                             
+                             
+                             #Notable Decline
+                            "#A8DCAB", 
+                            #Notable Decline & Black Residency Likely Since 1939 & Migration
+                            "#80EF80", 
+                            #Notable Decline & Likely No Black Residency in 1939 & Migration
+                            "#05472A",
                             
-                            "#6897bb", "#254061", "#D3D3D3", 
                             
+                            #Notable Decline & Black Residency Likely Since 1939 & No Migration
+                            "green",
+                            #Notable Decline & No Black Residency in 1950 
+                            "darkgreen",
+                            
+                            #Black Residency Likely Since 1939 & Migration
+                            "#6897bb", 
+                            #Likely No Black Residency in 1939 & Migration
+                            "lightblue", 
+                            #Black Residency Likely Since 1939 & No Migration
+                            "#254061", 
+                            #No Black Residency in 1950
+                            "#D3D3D3", 
+                            
+                            #Riot 
+                            "maroon", 
+                            #Notable Decline & Riot
                             "#f23fb2", 
-                            "purple", "#e66fa0",
+                            #Riot & No Black Residency in 1950
+                            "purple", 
+                            #"Riot & Black Residency Likely Since 1939 & No Migration",
+                            "black",
+                            #"Riot & Black Residency Likely Since 1939 & Migration",
+                            "red",
+                            #"Riot & Likely No Black Residency in 1939 & Migration",
+                            "#e66fa0",
                             
-                            "black", "black",  
-                            "black", "black", 
-                             "black", "black"),
-                          c("Notable Rise", "Notable Rise & Black Migration 1939-1950", "Notable Rise & Riot",
-                          "Notable Rise & Black Residency Since 1939", "Notable Rise & No Black Residency in 1950", 
+                            #Notable Rise & Riot & Black Residency Likely Since 1939 & Migration
+                            "black", 
+                            #Notable Rise & Riot & Black Residency Likely Since 1939 & No Migration
+                            "black",  
+                            #Notable Rise & Riot & Likely No Black Residency in 1939 & Migration
+                            "black",
+                            #Notable Rise & Riot & No Black Residency in 1950
+                            "black", 
+                            
+                            #Notable Decline & Riot & Black Residency Likely Since 1939 & Migration
+                            "black", 
+                            #Notable Decline & Riot & Black Residency Likely Since 1939 & No Migration
+                            "black",  
+                            #Notable Decline & Riot & Likely No Black Residency in 1939 & Migration
+                            "black",
+                            #Notable Decline & Riot & No Black Residency in 1950
+                            "black"
+                            ),
+                          c("Notable Rise", 
+                            "Notable Rise & Black Residency Likely Since 1939 & Migration", 
+                            "Notable Rise & Likely No Black Residency in 1939 & Migration", 
+                            
+                            "Notable Rise & Riot",
+                           "Notable Rise & Black Residency Likely Since 1939 & No Migration", 
+                           "Notable Rise & No Black Residency in 1950", 
                           
-                          "Notable Decline", "Notable Decline & Black Migration 1939-1950",  
-                          "Notable Decline & Riot", 
+                          "Notable Decline", 
+                          "Notable Decline & Black Residency Likely Since 1939 & Migration",  
+                          "Notable Decline & Likely No Black Residency in 1939 & Migration",  
                           
-                          "Notable Decline & Black Residency Since 1939", 
+                          "Notable Decline & Black Residency Likely Since 1939 & No Migration", 
                           "Notable Decline & No Black Residency in 1950", 
                           
-                          "Black Migration 1939-1950", 
-                          "Black Residency Since 1939", "No Black Residency in 1950", 
+                          "Black Residency Likely Since 1939 & Migration", 
+                          "Likely No Black Residency in 1939 & Migration",
+                          "Black Residency Likely Since 1939 & No Migration", 
+                          "No Black Residency in 1950", 
                           
                           "Riot",  
-                          "Riot & No Black Residency in 1950", "Riot & Black Residency Since 1939",
+                          "Notable Decline & Riot",
+                          "Riot & No Black Residency in 1950", 
+                          "Riot & Black Residency Likely Since 1939 & No Migration",
+                          "Riot & Black Residency Likely Since 1939 & Migration",
+                          "Riot & Likely No Black Residency in 1939 & Migration",
                           
-                          "Notable Rise & Riot & Black Migration 1939-1950",  
-                          "Notable Rise & Riot & Black Residency Since 1939", 
+                          "Notable Rise & Riot & Black Residency Likely Since 1939 & Migration",  
+                          "Notable Rise & Riot & Black Residency Likely Since 1939 & No Migration", 
+                          "Notable Rise & Riot & Likely No Black Residency in 1939 & Migration", 
                           "Notable Rise & Riot & No Black Residency in 1950",
                           
-                          "Notable Decline & Riot & Black Migration 1939-1950",
-                          "Notable Decline & Riot & Black Residency Since 1939", 
+                          "Notable Decline & Riot & Black Residency Likely Since 1939 & Migration",  
+                          "Notable Decline & Riot & Black Residency Likely Since 1939 & No Migration", 
+                          "Notable Decline & Riot & Likely No Black Residency in 1939 & Migration", 
                           "Notable Decline & Riot & No Black Residency in 1950")) 
    
   
@@ -268,26 +506,25 @@ plot_rise <- function(year_c, var) {
 
   plot_colors_lines <- plot_colors_lines[df_plot %>% distinct(bk_res_4_cat)  %>% pull()]
 
-  
-    #Plot
+
   g <- ggplot(data = df_plot) +
-      geom_sf(aes(fill = flag, color = as.factor(in_check))) +
+      geom_sf(aes(fill = flag)) +
       theme_minimal() + 
-      labs(title =  glue("Significant Events {year_c}"))+ 
-      scale_fill_manual(values = plot_colors) +
-      scale_color_manual(values = c("darkgrey", "black")) 
+      labs(title =  glue("Change in {title_piece} Between {year_c - 9}-{year_c - 5} and {year_c - 4}-{year_c}"), 
+           subtitle = glue("Intersection with Black Residency as of 1939 and 1950 & Riot in {year_c - 4}-{year_c}")) + 
+      scale_fill_manual(values = plot_colors) 
     
   plot(g)
   
-  #Plot
-  g <- ggplot(data = df_plot) +
-      geom_sf(aes(fill = flag, color = bk_res_4_cat), linewidth = 0.55) +
-      theme_minimal() + 
-      labs(title =  glue("Significant Events {year_c}"))+ 
-      scale_fill_manual(values = plot_colors) +
-      scale_color_manual(values = plot_colors_lines) 
-    
-  plot(g)
+  # #Plot
+  # g <- ggplot(data = df_plot) +
+  #     geom_sf(aes(fill = flag, color = bk_res_4_cat), linewidth = 0.55) +
+  #     theme_minimal() + 
+  #     labs(title =  glue("Change for {year_c}"))+ 
+  #     scale_fill_manual(values = plot_colors) +
+  #     scale_color_manual(values = plot_colors_lines) 
+  #   
+  # plot(g)
   
   df_plot %>% 
     st_drop_geometry() %>% 
@@ -297,6 +534,8 @@ plot_rise <- function(year_c, var) {
     arrange(flag)
   
 }
+
+
 
 plot_rise(1950, "hom_ct_sum_5")
 
@@ -308,120 +547,23 @@ plot_rise(1965, "hom_ct_sum_5")
 
 
 
-plot_rise(1950, "hom_ct_mean_5")
-
-plot_rise(1955, "hom_ct_mean_5")
-
-plot_rise(1960, "hom_ct_mean_5")
-
-plot_rise(1965, "hom_ct_sum_5")
-
-
 plot_rise(1950, "hom_rt_mean_5")
 
 plot_rise(1955, "hom_rt_mean_5")
 
 plot_rise(1960, "hom_rt_mean_5")
 
-plot_rise(1965, "hom_ct_sum_5")
+plot_rise(1965, "hom_rt_mean_5")
 
 ```
 
 
+
+# Investigate Change in Black Residency 1939 - 1848 - 1950 and Zoning 
 
 
 
 ## Investigate Riot Years 
-
-
-
-## Investigate Zoning 
-
-
-## Investigate Change in Black Residency to 1950
-
-```{r, echo=FALSE}
-
-
-
-df_45_50_change <- df %>% filter(year %in% c(1950, 1945)) %>% 
-  dplyr::select(-year_5) %>%
-  dplyr::select(GRID_ID, year, contains("sum_5"), contains("mean_5")) %>% 
-  arrange(year) %>% 
-  group_by(GRID_ID) %>% 
-  mutate(across(contains("_5"), .fns = list(change = ~(.-lag(.))))) %>% 
-  ungroup() %>%
-  filter(year == 1950)
-
-# test <- df %>% 
-#   st_drop_geometry()  %>% 
-#   filter(bk_res_4 > 0 | bk_res_5> 0) %>%
-#   dplyr::select(GRID_ID, contains("res_")) %>% 
-#   distinct() 
-
-ggplot(data = df %>% 
-                filter(year == 1950) %>% 
-                filter(bk_res_4 >0)) +
-    geom_sf(aes(fill = bk_res_4_cat)) +
-    theme_minimal() + 
-    labs(title = "Increase 1939 to 1950")+ 
-    coord_sf(
-    xlim = c(-87.94011, -87.52398), # Approximate longitude bounds of Chicago
-    ylim = c(41.64454, 42.02304)    # Approximate latitude bounds of Chicago
-  ) 
-  
-  
-
-ggplot(data = df %>% 
-                filter(year == 1950) %>% 
-                filter(bk_res_5 >0)) +
-    geom_sf(aes(fill = bk_res_5_cat)) +
-    theme_minimal() + 
-    labs(title =  "Increase 1948 to 1950")+ 
-    coord_sf(
-    xlim = c(-87.94011, -87.52398), # Approximate longitude bounds of Chicago
-    ylim = c(41.64454, 42.02304)    # Approximate latitude bounds of Chicago
-  ) 
-  
-
-ggplot(data = df_45_50_change %>% filter(hom_ct_sum_5_change > 0)) +
-    geom_sf(aes(fill = hom_ct_sum_5_change)) +
-    theme_minimal() + 
-    labs(title =  "Absolute Increase 1945 to 1950")+ 
-    coord_sf(
-    xlim = c(-87.94011, -87.52398), # Approximate longitude bounds of Chicago
-    ylim = c(41.64454, 42.02304)    # Approximate latitude bounds of Chicago
-  ) 
-
-ggplot(data = df_45_50_change %>% filter(hom_rt_mean_5_change > 0)) +
-    geom_sf(aes(fill = hom_rt_mean_5_change)) +
-    theme_minimal() + 
-    labs(title =  "Rate Increase 1945 to 1950")+ 
-    coord_sf(
-    xlim = c(-87.94011, -87.52398), # Approximate longitude bounds of Chicago
-    ylim = c(41.64454, 42.02304)    # Approximate latitude bounds of Chicago
-  ) 
-
-ggplot(data = df_45_50_change %>% filter(hom_ct_sum_5_change < 0)) +
-    geom_sf(aes(fill = hom_ct_sum_5_change)) +
-    theme_minimal() + 
-    labs(title =  "Absolute Decrease 1945 to 1950")+ 
-    coord_sf(
-    xlim = c(-87.94011, -87.52398), # Approximate longitude bounds of Chicago
-    ylim = c(41.64454, 42.02304)    # Approximate latitude bounds of Chicago
-  ) 
-
-ggplot(data = df_45_50_change %>% filter(hom_rt_mean_5_change < 0)) +
-    geom_sf(aes(fill = hom_rt_mean_5_change)) +
-    theme_minimal() + 
-    labs(title =  "Rate Decrease 1945 to 1950")+ 
-    coord_sf(
-    xlim = c(-87.94011, -87.52398), # Approximate longitude bounds of Chicago
-    ylim = c(41.64454, 42.02304)    # Approximate latitude bounds of Chicago
-  ) 
-  
-
-```
 
 
 
@@ -457,7 +599,7 @@ output %>%
 ## Testing Black Residency Values
 
 
-We see polygons where the percentage of 1% concentration is lower than 10% or 90%. There are very few instances where the difference is large (more than 10 percentage points difference in area mapped), and most occur in the south of chicago where the maps were a) most distorted and b) the least amount of development matches the present state. 
+We see polygons where the percentage of 1% concentration is lower than 10% or 90%. There are very few instances where the difference is large (more than 10 percentage points difference in area mapped), and most occur in the south of Chicago where the maps were a) most distorted and b) the least amount of development matches the present state. 
 
 It may be best to use the 90% value rather than the 10% or 1% value in these instances. This is further corroborated by the original maps. The areas plotted below where the difference is highest appear to be of fairly equal size in all three maps. 
 
